--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.4.3",
     "bulma-extensions": "^6.2.7",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
