--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.9.0",
     "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
