--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
     "bulma-extensions": "^6.2.7",
+    "firebase": "^7.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bulma-components": "^2.3.0",
