--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.4.3",
+    "axios": "^0.19.0",
     "bulma-extensions": "^6.2.7",
     "firebase": "^7.0.0",
     "node-sass": "^4.12.0",
