--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.27",
     "@material-ui/styles": "^4.4.3",
     "axios": "^0.19.0",
     "bulma-extensions": "^6.2.7",
