--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/lab": "^4.0.0-alpha.27",
     "@material-ui/styles": "^4.4.3",
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-pdf": "^3.4.1",
     "axios": "^0.19.0",
     "bulma-extensions": "^6.2.7",
     "firebase": "^7.0.0",
