--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/styles": "^4.4.3",
     "@progress/kendo-drawing": "^1.6.0",
     "@progress/kendo-react-pdf": "^3.4.1",
+    "@react-pdf/renderer": "^1.6.7",
     "axios": "^0.19.0",
     "bulma-extensions": "^6.2.7",
     "firebase": "^7.0.0",
